fix white line on mobile

--- a/assets/themes/bridge/css/style_dynamic.css
+++ b/assets/themes/bridge/css/style_dynamic.css
@@ -1688,3 +1688,12 @@ footer #lang_sel_list.lang_sel_list_vertical a,
 
 .testimonials_c_holder .testimonial_content_inner .testimonial_text_inner .testimonial_author { font-size: 13px;line-height: 18px;text-transform: uppercase;font-family: Montserrat;font-style: normal;font-weight: 700;}
 
+@media (max-width:1000px){
+  .vc_custom_1549629367860,
+  .vc_custom_1550190772044,
+  .vc_custom_1549560468130,
+  .vc_custom_1550229148205,
+  .vc_custom_1549557982946{
+    margin-top: -20px !important;
+  }
+}
